--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
     .bg-primary {
-        @apply bg-white dark:bg-slate-800
+        @apply bg-white dark:bg-green-800
     }
 
     h1, h2, h3, h4, h5, h6 {
